<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dk.medcom.video.api</groupId>
	<artifactId>medcom-video-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.9</version>
	</parent>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<testcontainers.version>2.0.2</testcontainers.version>
		<spring-prometheus-app-info-version>2.0.3</spring-prometheus-app-info-version>
		<spring-request-id-logger-version>2.0.1</spring-request-id-logger-version>
		<jacoco-version>0.8.12</jacoco-version>
		<shed-lock-version>7.5.0</shed-lock-version>
		<okhttp-version>5.3.2</okhttp-version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Modules in project -->
			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>documentation</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-interface</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-service</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-test</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>integrationtest</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.medcom.video.api</groupId>
				<artifactId>medcom-video-api-qa</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Testcontainers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>2.0.3</version>
            </dependency>

			<!-- Actuator and prometheus -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-prometheus-app-info</artifactId>
				<version>${spring-prometheus-app-info-version}</version>
			</dependency>

			<!-- Request ID logger -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-request-id-logger</artifactId>
				<version>${spring-request-id-logger-version}</version>
			</dependency>

			<!-- Jackson Databind nullable -->
			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>0.2.6</version>
			</dependency>

			<!-- Swagger annotations -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>2.2.27</version>
			</dependency>

			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>1.6.14</version>
			</dependency>

			<!-- Test dependencies - test containers -->
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-mockserver</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>

			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-mariadb</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver</artifactId>
				<version>3.12</version>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-client-java</artifactId>
				<version>5.15.0</version>
			</dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.21.0</version>
                <scope>test</scope>
            </dependency>

			<!-- Code coverage -->
			<dependency>
				<groupId>org.jacoco</groupId>
				<artifactId>org.jacoco.agent</artifactId>
				<version>${jacoco-version}</version>
			</dependency>

			<!-- Integration test client dependencies -->
			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
                <version>${okhttp-version}</version>
				<scope>test</scope>
			</dependency>

            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>logging-interceptor</artifactId>
                <version>${okhttp-version}</version>
                <scope>test</scope>
            </dependency>

			<dependency>
				<groupId>io.gsonfire</groupId>
				<artifactId>gson-fire</artifactId>
				<version>1.9.0</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.oltu.oauth2</groupId>
				<artifactId>org.apache.oltu.oauth2.client</artifactId>
				<scope>test</scope>
				<version>1.0.2</version>
			</dependency>

			<!-- commons-codec -->
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.20.0</version>
			</dependency>

			<!-- Flyway -->
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>11.20.0</version>
			</dependency>

			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-mysql</artifactId>
				<version>11.20.0</version>
			</dependency>

			<dependency>
				<groupId>org.glassfish.jersey</groupId>
				<artifactId>jersey-bom</artifactId>
				<version>4.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Audit logging -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>audit-api</artifactId>
				<version>2.0.2</version>
			</dependency>

			<!-- Nats driver -->
			<dependency>
				<groupId>io.nats</groupId>
				<artifactId>jnats</artifactId>
				<version>2.24.1</version>
			</dependency>

			<!-- Task locking -->
			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-spring</artifactId>
				<version>${shed-lock-version}</version>
			</dependency>

			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-provider-jdbc-template</artifactId>
				<version>${shed-lock-version}</version>
			</dependency>

			<!-- Logback -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>9.0</version>
				<scope>runtime</scope>
			</dependency>

			<!-- okhttp3 -->
			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>${okhttp-version}</version>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>logging-interceptor</artifactId>
				<version>${okhttp-version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<finalName>${project.artifactId}</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>io.fabric8</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<version>0.48.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.9.10</version>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<prefix>git</prefix>
					<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
					<verbose>true</verbose>
					<useNativeGit>false</useNativeGit>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<skipPoms>false</skipPoms>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<abbrevLength>7</abbrevLength>
					<offline>true</offline>
					<skip>false</skip>
					<gitDescribe>
						<skip>false</skip>
						<always>false</always>
						<dirty>-dirty</dirty>
						<forceLongFormat>false</forceLongFormat>
					</gitDescribe>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.1</version>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>makeAggregateBom</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<projectType>library</projectType>
					<schemaVersion>1.4</schemaVersion>
					<includeBomSerialNumber>true</includeBomSerialNumber>
					<includeCompileScope>true</includeCompileScope>
					<includeProvidedScope>true</includeProvidedScope>
					<includeRuntimeScope>true</includeRuntimeScope>
					<includeSystemScope>true</includeSystemScope>
					<includeTestScope>false</includeTestScope>
					<includeLicenseText>false</includeLicenseText>
					<outputReactorProjects>true</outputReactorProjects>
					<outputFormat>all</outputFormat>
					<outputName>service-sbom</outputName>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<modules>
		<module>medcom-video-api-web</module>
		<module>medcom-video-api-service</module>
		<module>integrationtest</module>
		<module>medcom-video-api-test</module>
		<module>medcom-video-api-qa</module>
		<module>medcom-video-api-interface</module>
		<module>documentation</module>
	</modules>
</project>
